--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 98)
 
 file(GLOB EX00 ex00/*.cpp ex00/*.hpp)
 add_executable(ex00 ${EX00})
+
+file(GLOB EX01 ex01/*.cpp ex01/*.hpp)
+add_executable(ex01 ${EX01})
 #
 #
 #file(GLOB ../../Desktop/del/ex01 ex01/*.cpp ex01/*.hpp)
