--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ add_executable(ex00 ${EX00})
 
 file(GLOB EX01 ex01/*.cpp ex01/*.hpp)
 add_executable(ex01 ${EX01})
+
+file(GLOB EX02 ex02/*.cpp ex02/*.hpp)
+add_executable(ex02 ${EX02})
 #
 #
 #file(GLOB ../../Desktop/del/ex01 ex01/*.cpp ex01/*.hpp)
