--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,6 @@ add_executable(ex01 ${EX01})
 
 file(GLOB EX02 ex02/*.cpp ex02/*.hpp)
 add_executable(ex02 ${EX02})
-#
-#
-#file(GLOB ../../Desktop/del/ex01 ex01/*.cpp ex01/*.hpp)
-#add_executable(../../Desktop/del/ex01 ${EX01})
-#
-#file(GLOB ../../Desktop/del/ex02 ex02/*.cpp ex02/*.hpp)
-#add_executable(../../Desktop/del/ex02 ${EX02})
-#
-#file(GLOB ../../Desktop/del/ex03 ex03/*.cpp ex03/*.hpp)
-#add_executable(../../Desktop/del/ex03 ${EX03})
+
+file(GLOB EX03 ex03/*.cpp ex03/*.hpp)
+add_executable(ex03 ${EX03})
